--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "Nathan Lawrence"
+  name             : "Nathan P. Lawrence"
+  alt_name         : "Nathan Lawrence"
   avatar           : "nathan.jpg"
   bio              : "PhD candidate at the University of British Columbia"
   location         : "Vancouver, BC"
