--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Nathan P. Lawrence"
 title_separator          : "-"
 name                     : &name "Nathan Lawrence"
 description              : &description "personal description"
-url                      : "https://nplawrence.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://nplawrence.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "NPLawrence/nplawrence.github.io"
 logo                     : "/assets/images/site-logo.jpg"
