--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
       url   : "https://dais.chbe.ubc.ca"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=Fe9p7QoAAAAJ&hl"
-  email            : "nathan.p.lawrence@nplawrence.com"
+  email            : "contact@nplawrence.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
