--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   name             : "Nathan P. Lawrence"
   short_name         : "Nathan Lawrence"
   avatar           : "nathan.jpg"
-  bio              : "PhD candidate at the University of British Columbia"
+  bio              : "Deep reinforcement learning <br> Optimization and control <br> Engineering applications"
   location         : "Vancouver, BC"
   employer         : "University of British Columbia"
   employer_short   : "UBC"
