--- a/_data/cv/teaching.yaml
+++ b/_data/cv/teaching.yaml
@@ -2,7 +2,7 @@
   items:
     - institution: Portland State University
       department: Fariborz Maseeh Department of Mathematics & Statistics
-      title: Graduate Teaching Assistant
+      title: Graduate Teaching Assistant (instructor of record)
       year: 2016
       year_end: 2018
       courses:
