--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -166,6 +166,36 @@ references:
   URL: https://linkinghub.elsevier.com/retrieve/pii/S2405896320303839
   volume: '53'
 
+- id: lawrence2021DeepReinforcement
+  accessed:
+    - year: 2021
+      month: 12
+      day: 12
+  author:
+    - family: Lawrence
+      given: Nathan P.
+    - family: Forbes
+      given: Michael G.
+    - family: Loewen
+      given: Philip D.
+    - family: McClement
+      given: Daniel G.
+    - family: Backstrom
+      given: Johan U.
+    - family: Gopaluni
+      given: R. Bhushan
+  issued:
+    - year: 2021
+      month: 11
+      day: 13
+  source: arXiv.org
+  title: >-
+    Deep Reinforcement Learning with Shallow Controllers: An Experimental
+    Application to PID Tuning
+  title-short: Deep Reinforcement Learning with Shallow Controllers
+  type: manuscript
+  URL: http://arxiv.org/abs/2111.07171
+
 - id: mcclement2021MetaReinforcementLearning
   accessed:
     - year: 2021
