--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -51,10 +51,7 @@ references:
       given: Nathan
   citation-key: lawrence2016ConvexNonconvex
   DOI: 10.15760/honors.319
-  issued:
-    - year: 2016
-      month: 1
-      day: 1
+  year: 2016
   publisher: Portland State University
   source: DOI.org (Crossref)
   title: >-
