--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -24,6 +24,7 @@ references:
   container-title: IFAC World Congress
   container-title-short: IFAC World Congr.
   DOI: https://doi.org/10.1016/j.ifacol.2020.12.126
+  event-title: IFAC World Congress
   issued:
     - year: 2020
   page: 218–229
@@ -121,6 +122,7 @@ references:
   citation-key: lawrence2020OptimalPID
   container-title: IFAC World Congress
   container-title-short: IFAC World Congr.
+  event-title: IFAC World Congress
   issued:
     - year: 2020
   license: All rights reserved
@@ -150,8 +152,8 @@ references:
     - family: Gopaluni
       given: R. Bhushan
   citation-key: lawrence2020ReinforcementLearning
-  container-title: IFAC-PapersOnLine
-  container-title-short: IFAC-Pap.
+  container-title: IFAC World Congress
+  container-title-short: IFAC World Congr.
   DOI: 10.1016/j.ifacol.2020.12.127
   event-title: IFAC World Congress
   issued:
@@ -200,7 +202,7 @@ references:
   URL: https://linkinghub.elsevier.com/retrieve/pii/S0967066121002963
   volume: '121'
 
-- id: mcclement2021MetaReinforcementLearninga
+- id: mcclement2021MetaReinforcementLearning
   accessed:
     - year: 2021
       month: 9
@@ -219,10 +221,11 @@ references:
       given: Johan U.
     - family: Gopaluni
       given: R. Bhushan
-  citation-key: mcclement2021MetaReinforcementLearninga
+  citation-key: mcclement2021MetaReinforcementLearning
   container-title: IFAC-PapersOnLine
   container-title-short: IFAC-Pap.
   DOI: 10.1016/j.ifacol.2021.08.321
+  event-title: AdCHEM
   issued:
     - year: 2021
   note: Keynote Paper
@@ -288,6 +291,7 @@ references:
     - family: Gopaluni
       given: R. Bhushan
   citation-key: mcclement2022MetaReinforcementLearning
+  event-title: AdCONIP
   issued:
     - year: 2022
   publisher: arXiv
