--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,6 +1,7 @@
 ---
 references:
-- id: gopaluni2020modern
+- id: gopaluni2020ModernMachine
+  archive: https://arxiv.org/abs/2209.11123
   author:
     - family: Gopaluni
       given: R Bhushan
@@ -20,14 +21,14 @@ references:
       given: Jong Woo
     - family: Lawrence
       given: Nathan P
-  citation-key: gopaluni2020modern
-  container-title: IFAC World Congress
-  container-title-short: IFAC World Congr.
+  citation-key: gopaluni2020ModernMachine
+  container-title: IFAC-PapersOnLine
+  container-title-short: IFAC-Pap.
   DOI: https://doi.org/10.1016/j.ifacol.2020.12.126
   event-title: IFAC World Congress
-  year: 2020
+  issued:
+    - year: 2020
   page: 218–229
-  publisher: Elsevier
   title: >-
     Modern machine learning tools for monitoring and control of industrial
     processes: A survey
@@ -44,7 +45,8 @@ references:
       given: Nathan
   citation-key: lawrence2016ConvexNonconvex
   DOI: 10.15760/honors.319
-  year: 2016
+  issued:
+    - year: 2016
   license: All rights reserved
   publisher: Portland State University
   source: DOI.org (Crossref)
@@ -59,7 +61,8 @@ references:
     - family: Lawrence
       given: Nathan
   citation-key: lawrence2018LowDimensionalCharacterization
-  year: 2018
+  issued:
+    - year: 2018
   license: All rights reserved
   publisher: Portland State University
   source: Zotero
@@ -87,7 +90,8 @@ references:
   container-title: Advances in Neural Information Processing Systems
   container-title-short: Adv. Neural Inf. Process. Syst.
   event-title: NeurIPS
-  year: 2020
+  issued:
+    - year: 2020
   license: All rights reserved
   note: NeurIPS Spotlight
   source: papers.nips.cc
@@ -98,34 +102,34 @@ references:
   volume: '33'
 
 - id: lawrence2020OptimalPID
-  accessed:
-    - year: 2020
-      month: 12
-      day: 22
+  archive: https://arxiv.org/abs/2005.04539
   author:
     - family: Lawrence
-      given: Nathan P.
+      given: Nathan P
     - family: Stewart
-      given: Gregory E.
+      given: Gregory E
     - family: Loewen
-      given: Philip D.
+      given: Philip D
     - family: Forbes
-      given: Michael G.
+      given: Michael G
     - family: Backstrom
-      given: Johan U.
+      given: Johan U
     - family: Gopaluni
-      given: R. Bhushan
+      given: R Bhushan
   citation-key: lawrence2020OptimalPID
-  container-title: IFAC World Congress
-  container-title-short: IFAC World Congr.
+  container-title: IFAC-PapersOnLine
+  container-title-short: IFAC-Pap.
+  DOI: https://doi.org/10.1016/j.ifacol.2020.12.129
   event-title: IFAC World Congress
-  year: 2020
-  license: All rights reserved
-  source: arXiv.org
+  issued:
+    - year: 2020
+  page: 236–241
   title: >-
-    Optimal PID and Antiwindup Control Design as a Reinforcement Learning
-    Problem
+    Optimal PID and antiwindup control design as a reinforcement learning
+    problem
   type: paper-conference
+  URL: https://www.sciencedirect.com/science/article/pii/S2405896320303852
+  volume: '53'
 
 - id: lawrence2020ReinforcementLearning
   accessed:
@@ -147,11 +151,12 @@ references:
     - family: Gopaluni
       given: R. Bhushan
   citation-key: lawrence2020ReinforcementLearning
-  container-title: IFAC World Congress
-  container-title-short: IFAC World Congr.
+  container-title: IFAC-PapersOnLine
+  container-title-short: IFAC-Pap.
   DOI: 10.1016/j.ifacol.2020.12.127
   event-title: IFAC World Congress
-  year: 2020
+  issued:
+    - year: 2020
   license: All rights reserved
   page: 230-235
   source: DOI.org (Crossref)
@@ -184,7 +189,8 @@ references:
   container-title-short: Control Engineering Practice
   DOI: 10.1016/j.conengprac.2021.105046
   ISSN: '09670661'
-  year: 2022
+  issued:
+    - year: 2022
   page: '105046'
   source: DOI.org (Crossref)
   title: >-
@@ -219,7 +225,8 @@ references:
   container-title-short: IFAC-Pap.
   DOI: 10.1016/j.ifacol.2021.08.321
   event-title: AdCHEM
-  year: 2021
+  issued:
+    - year: 2021
   note: Keynote Paper
   page: 685-692
   source: DOI.org (Crossref)
@@ -251,7 +258,8 @@ references:
   container-title: Journal of Process Control
   container-title-short: J. Process Control
   DOI: 10.1016/j.jprocont.2022.08.002
-  year: 2022
+  issued:
+    - year: 2022
   page: 139-152
   source: DOI.org (Crossref)
   title: >-
@@ -282,8 +290,10 @@ references:
     - family: Gopaluni
       given: R. Bhushan
   citation-key: mcclement2022MetaReinforcementLearning
+  container-title: AdCONIP
   event-title: AdCONIP
-  year: 2022
+  issued:
+    - year: 2022
   publisher: arXiv
   source: arXiv.org
   title: Meta-Reinforcement Learning for Adaptive Control of Second Order Systems
@@ -311,7 +321,8 @@ references:
   container-title: AIChE Journal
   container-title-short: AIChE J.
   DOI: 10.1002/aic.16689
-  year: 2019
+  issued:
+    - year: 2019
   license: All rights reserved
   source: DOI.org (Crossref)
   title: >-
